# validator-node

./: .env.sample  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: test.yml
cli/: Cargo.toml
cli/src/: args.rs  errors.rs  lib.rs  main.rs  test_utils.rs  ui.rs
cli/src/commands/: access.rs  assets.rs  instructions.rs  make_it_rain.rs  mod.rs  templates.rs  tokens.rs  wallets.rs
cli/src/console/: dashboard.rs  mod.rs  server.rs  terminal.rs
config/: default.toml  log4rs.yml.example  postgresql.conf
docs/: INSTRUCTION_PROCESSING.md  RPC_AUTHORIZATION.md  TEMPLATES.md
docs/instructions/: pipeline.mmd  states.mmd
docs/single-use-tokens/: README.md  sell-token-sequence-mvp.mmd  sell-token-sequence-option-1.mmd  sell-token-sequence-option-4.mmd  states-diagram.mmd
docs/templates/: README.md
node/: .env.sample  Cargo.toml
node/migrations/: V1587537143__create_users.sql  V1588024175__create_digital_assets.sql  V1588079742__create_asset_states.sql  V1588168331__create_tokens.sql  V1588409180__create_wallet.sql  V1588611016__create_access.sql  V1589211379__create_append_only_tables.sql  V1589388698__create_instructions.sql  V1589388698__create_transaction.sql  V1589547842__create_append_only_tables.sql  V1589825132__create_views.sql  V1589828812__create_proposals.sql  V1589832444__create_aggregate_signature_messages.sql  V1589832543__create_signed_proposals.sql
node/src/: cli.rs  config.rs  errors.rs  lib.rs  main.rs  server.rs
node/src/api/: mod.rs  routing.rs  server.rs
node/src/api/config/: actix.rs  cors.rs  mod.rs
node/src/api/controllers/: status.rs
node/src/api/errors/: api_error.rs  application_error.rs  auth_error.rs  mod.rs
node/src/api/helpers/: application.rs
node/src/api/middleware/: app_version_header.rs  authentication.rs  mod.rs
node/src/api/models/: access_tokens.rs  mod.rs
node/src/api/utils/: errors.rs
node/src/bootstrap/: config.rs  mod.rs  transport.rs
node/src/cli/: access.rs  asset.rs  mod.rs  template.rs  wallet.rs
node/src/consensus/: communications.rs  config.rs  consensus_committee.rs  consensus_processor.rs  consensus_worker.rs  errors.rs  instruction_state.rs  mod.rs  processor.rs
node/src/db/: access.rs  errors.rs  migrations.rs  mod.rs  pool.rs  utils.rs
node/src/db/models/: access.rs  asset_states.rs  digital_assets.rs  enums.rs  mod.rs  tokens.rs  transaction.rs  transactions.rs  wallet.rs
node/src/db/models/consensus/: aggregate_signature_messages.rs  instructions.rs  mod.rs  proposals.rs  signed_proposals.rs  views.rs
node/src/db/utils/: db.rs  errors.rs  mod.rs  validation.rs
node/src/metrics/: actor.rs  events.rs  metrics.rs  mod.rs
node/src/template/: actix.rs  actix_web_impl.rs  config.rs  context.rs  errors.rs  mod.rs  runner.rs  single_use_tokens.rs
node/src/template/actors/: handler.rs  mod.rs  runner.rs
node/src/test/: mod.rs
node/src/test/data/: example-private-key-invalid.pem  example-private-key.pem  example-public-key.pem
node/src/test/functional/: metrics.rs  mod.rs
node/src/test/utils/: actix.rs  mod.rs  types.rs
node/src/test/utils/builders/: access_builder.rs  asset_state_builder.rs  digital_asset_builder.rs  http_request_builder.rs  mod.rs  node_wallet_builder.rs  template_context_builder.rs  token_builder.rs  wallet_store_builder.rs
node/src/test/utils/builders/consensus/: aggregate_signature_message_builder.rs  instruction_builder.rs  mod.rs  proposal_builder.rs  signed_proposal_builder.rs  view_builder.rs
node/src/test_utils/: actix.rs  mod.rs  types.rs
node/src/test_utils/builders/: access_builder.rs  asset_state_builder.rs  digital_asset_builder.rs  http_request_builder.rs  mod.rs  node_wallet_builder.rs  template_context_builder.rs  token_builder.rs  transaction_builder.rs  wallet_store_builder.rs
node/src/types/: asset.rs  asset_id.rs  committee_mode.rs  errors.rs  identity.rs  instruction_id.rs  mod.rs  node_id.rs  proposal_id.rs  pubkey.rs  raid_id.rs  template.rs  template_id.rs  token.rs  token_id.rs
node/src/types/consensus/: append_only_state.rs  committee_state.rs  mod.rs  signature_data.rs
node/src/wallet/: errors.rs  hot_wallet.rs  mod.rs
scripts/: new_migration.sh  start_tor.sh
template-derive/: Cargo.toml
template-derive/snapshots/: expand.rs  source.rs
template-derive/src/: contract.rs  contracts.rs  lib.rs
template-macro/: Cargo.toml
template-macro/src/: lib.rs
template-macro/tests/: test.rs
