[package]
name = "cli"
version = "0.1.0"
authors = ["The Tari Development Community"]
description = "The tari validation node implementation"
repository = "https://github.com/tari-labs/validator-node"
license = "BSD-3-Clause"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tari_validator_node = { version = "0.1.0", path = "../node" }
