[package]
name = "tvnc"
version = "0.1.0"
authors = ["The Tari Development Community"]
description = "The tari validation node CLI"
repository = "https://github.com/tari-labs/validator-node"
license = "BSD-3-Clause"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tari_common = "^0.1"
tari_validator_node = { version = "0.1.0", path = "../node" }
structopt = { version = "0.3", default_features = false }
dotenv = "0.15"
thiserror = "1"
config = { version = "0.9.3", default_features = false }
actix-rt = "1.1.1"
anyhow = "1"
deadpool-postgres = { version = "0.5.5", features = ["config"] }
lazy_static = "1.4"
tokio = { version = "0.2.21", default_features = false, features = ["sync"] }
serde_json = "1"

tui = { version = "0.9.5", features = ["crossterm"] }
crossterm = "0.17"

[dev-dependencies]
tari_test_utils = "^0.0"
pretty_env_logger = "0.4.0"
tempdir = "0.3.7"
dotenv = "0.15"
