[package]
name = "tari_validator_node"
version = "0.1.0"
authors = ["The Tari Development Community"]
description = "The tari validation node implementation"
repository = "https://github.com/tari-labs/validator-node"
license = "BSD-3-Clause"
edition = "2018"

[dependencies]
tari_common = "^0.1"
tari_comms = "^0.1"
tari_core = "^0.1"
tari_crypto = "^0.3"
tari_wallet = "^0.1"

actix-cors = "0.2"
actix-http = "1.0.1"
actix-rt = "1.1.0"
actix-web = "2.0.0"
anyhow = "1"
chrono = "0.4"
config = { version = "0.9.3", default_features = false }
deadpool = "0.5.0"
deadpool-postgres = { version = "0.5.5", features = ["config"] }
log = "0.4"
postgres = "0.17.1"
postgres-protocol = "0.5.0"
postgres-types = "0.1.1"
rand = "0.7"
refinery = { version = "0.2", features = ["tokio-postgres"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
structopt = { version = "0.3", default_features = false }
thiserror = "1"
tokio = { version = "0.2.6", default_features = false, features = ["sync"] }
tokio-pg-mapper = { version = "0.1.7", features = ["derive"] }
tokio-postgres = { version = "0.5.3", features = ["with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }
uuid = { version = "0.8", features = ["serde"] }
bytes = "0.5.4"

[dev-dependencies]
lazy_static = "1.4"
dotenv = "0.15"
tempdir = "0.3.7"
multiaddr = {version = "0.7.0", package = "parity-multiaddr"}
tari_test_utils = "^0.0"
