[package]
name = "tari_template_derive"
version = "0.1.0"
authors = ["The Tari Development Community"]
description = "The tari validation node derive macros"
repository = "https://github.com/tari-labs/validator-node"
license = "BSD-3-Clause"
edition = "2018"

[dependencies]
proc-macro2 = "1.0.17"
quote = "1.0"
darling = "0.10"

[dependencies.syn]
version = "1.0"
features = ["full", "parsing"]

[lib]
proc-macro = true
