[package]
name = "tari_template_macro"
version = "0.1.0"
authors = ["The Tari Development Community"]
description = "The tari validation node implementation"
repository = "https://github.com/tari-labs/validator-node"
license = "BSD-3-Clause"
edition = "2018"

[dependencies]
proc-macro2 = "1.0.13"
quote = "1.0"
darling = "0.10"

[dependencies.syn]
version = "1.0"
features = ["full"]

[dev-dependencies]
tari_validator_node = { path = "../node", version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
actix-web = "2.0.0"
actix-rt = "1.1.1"
actix = "0.10.0-alpha.3"
futures = "0.3"
serde_json = "1.0"
anyhow = "1"

[lib]
proc-macro = true
